[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://fff.tscn" type="PackedScene" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -26.0
margin_bottom = 26.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 52.0

[node name="HBoxContainerConnection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="ButtonConnect" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerConnection"]
margin_right = 64.0
margin_bottom = 24.0
grow_horizontal = 2
text = "Connect"

[node name="LineEditIpAdress" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainerConnection"]
margin_left = 68.0
margin_right = 1024.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 206, 48 )
size_flags_horizontal = 3
text = "127.0.0.1"
align = 1

[node name="HBoxContainerSize" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerSize"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 19.0
text = "Size"

[node name="LineEditWidth" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainerSize"]
margin_left = 30.0
margin_right = 88.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 206, 48 )
text = "28"
align = 1

[node name="LineEditHeight" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainerSize"]
margin_left = 92.0
margin_right = 150.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 206, 48 )
text = "13"
align = 1

[node name="fff" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainerConnection/ButtonConnect" to="." method="_on_ButtonConnect_pressed"]
